<resources>
    <string name="app_name">plirosouSOSTA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">SETTINGS</string>
    <string name="short_hour">h</string>
    <string name="short_minute">m</string>
    <string name="currency">€</string>
    <string name="title_activity_entitled">ENTITLED</string>
    <string name="title_activity_history">HISTORY</string>
    <string name="button_payed_correctly">ENTITLED</string>
    <string name="button_insert_shift">ADD\nSHIFT</string>
    <string name="subtitle_insert_shift">NOTE DOWN YOUR SHIFTS</string>
    <string name="button_history">YOUR\nHISTORY</string>
    <string name="subtitle_history">YOUR PAST SHIFTS</string>
    <string name="picker_title_date">Day</string>
    <string name="picker_title_shift_start">START SHIFT</string>
    <string name="picker_title_shift_end">END SHIFT</string>
    <string name="picker_title_from">FROM</string>
    <string name="picker_title_to">TO</string>
    <string name="dialog_overwrite_hours">Do you want to overwrite the shift?</string>
    <string name="overwrite">Overwrite</string>
    <string name="cancel">Cancel</string>
    <string name="info_month">MONTH</string>
    <string name="info_you_have_worked">YOU HAVE WORKED</string>
    <string name="info_you_will_earn">YOU WILL GET</string>
    <string name="info_you_are_entitled">ENTITLED</string>
    <string name="nav_settings">SETTINGS</string>
    <string name="nav_history">HISTORY</string>
    <string name="nav_entitled">ENTITLED</string>
    <string name="nav_info">USEFUL INFO</string>
    <string name="nav_shifts">SHIFTS</string>
    <string name="nav_about">ABOUT</string>
    <string name="tab_title_from_to">FROM-TO</string>
    <string name="tab_title_all">ALL</string>
    <string name="entitled_main">BECAUSE:\nYOU WORKED 0 HOURS AND 0 MINUTES</string>
    <string name="entitled_should_get_paid">SO, YOU SHOULD GET TOTALY €</string>
    <string name="entitled_law_states">IF YOU DID NOT GET THAT, YOUR PAY IS WRONG</string>
    <string name="entitled_info_bottom">What can I do if I got less money than I should?</string>
    <string name="entitled_button_what_do">What can I do?</string>
    <string name="entitled_infobox_paid">YOU SHOULD GET € EXTRA</string>
    <string name="entitled_infobox_sundays">SUNDAYS\nYOU WORKED</string>
    <string name="entitled_infobox_nights">NIGHTS\nYOU WORKED</string>
    <string name="entitled_infobox_overtime">OVERTIME\nYOU WORKED</string>
    <string name="entitled_infobox_overworking">OVERWORK\nYOU WORKED</string>
    <string name="entitled_infobox_saturdays">SATURDAYS\nYOU WORKED</string>
    <string name="entitled_infobox_should">YOU SHOULD GET</string>
    <string name="entitled_infobox_more">EXTRA</string>
    <string name="title_activity_settings">SETTINGS</string>
    <string name="entitled_infobox_top_deserve">x YOUR RATE = </string>
    <string name="entitled_infobox_top_more">ALSO, YOU SHOULD GET:</string>
    <string name="entitled_infobox_newtop">ENTITLED IN TOTAL: €</string>
    <string name="history_youhaveworked">YOU WORKED</string>
    <string name="history_youwillget">ΘΑ ΠΑΡΕΙΣ ΣΥΝΟΛΟ</string>
    <string name="history_accordingtolaw">YOU SHOULD GET</string>
    <string name="history_total">TOTAL</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="history_table_header_date">DATE</string>
    <string name="history_table_header_hours">YOU WORKED</string>
    <string name="history_table_header_entitled">ENTITLED</string>
    <string name="pref_header_general">General</string>
    <string name="pref_infotop">The following 4 questions are necessary in order to calculate correctly the money you should be paid. This data is never sent to noone. You are the only one who can see it.</string>
    <string name="pref_title_howmuch_paid">1) How much money are you paid per hour? (net money, what you get in your hands) (tap here to answer)</string>
    <string name="pref_title_below25yold">2) Are you younger than 25 years old? (if yes, tap here)</string>
    <string name="pref_title_hotels">3) Do you work in a horeca business? (e.g. hotel, restaurant, taverna, catering, bar, cafe, souvlatzidiko, etc) (if yes, tap here)</string>
    <string name="pref_title_years_experience">4) How many years of documented work experience did you have until 14/02/2012? (tap here to answer)</string>
    <string name="about_title"><b>plirosouSOSTA</b></string>
    <string name="about_text"><![CDATA[Get paid right!<br /><br />We want all workers to know their working rights, what the Greek labor law says, and how much they should be getting for their labor.<br /><br />In this app, workers can simply note down the work shifts they did and they can see immediately how much they should be paid. Thus, they can check if their reimbursement is according to the Greek law and they can have some directions that can help them identify possible mistakes in their reimbursement.<br /><br />All the information and the calculations in this app refer to salaried employees (“misthoti ipalili”) in the Private sector (not in the Public sector) in Greece, according to the agreed compensation and the minimum wage.<br /><br />E.g. cooks, delivery workers, courier workers, retail shop clerks, call-centers agents, employees in hair-salons, hotel receptionists, employees in NGOs, etc.<br /><br />Every time, all the complicated Greek legislation provisions are taken into consideration, e.g. what the Greek law says if someone works on a Sunday or a Saturday or during night or do overtime.<br /><br />This app is an initiative of Hymopio juice-bar (in Athens, Monastiraki).<br />(idea, concept, app functions, management, funding).<br /><br />The app was developed by commons|lab (http://commonslab.gr). It’s open-source, on a GPL v3 permission.<br /><br />The app layout was designed by designature (Athens, http://www.designature.gr/).<br /><br />All the legislation guidance was provided by the specialised in Labor-Law lawyer firm “Chrysoula Mylona I  Filostratos Stroubos & Associates” (Athens, Navarinou 17, tel: 211 0121684, email: info@mslawoffice.eu  I  web: mslawoffice.eu).<br /><br />Useful help, information and contemplation exchange was provided by OpenLab (Athens, https://www.olathens.org - email: info@olathens.com).<br /><br />Administrator of the app and its content is Hymopio juice-bar and specifically Aris P. (plirosousosta@gmail.com).]]>Κάθε πληροφορία που εμπεριέχεται στην εφαρμογή και οι υπολογισμοί που εξάγονται από αυτή δεν αποτελούν επίσημη ενημέρωση ούτε δεσμευόμαστε ή ευθυνόμαστε ως προς την πληρότητα και ορθότητα τους. Η εφαρμογή είναι καθαρά ενημερωτικού χαρακτήρα, και δεν μπορεί να χρησιμοποιηθεί ως νομική συμβουλή. Για επίσημη ενημέρωση και ειδικές συμβουλές σε θέματα εργασιακών ζητημάτων που σε αφορούν και τον επακριβή υπολογισμό των αποδοχών σου, απευθύνσου σε δικηγόρο ή άλλο εξειδικευμένο φορέα. Η χρήση της εφαρμογής, των πληροφοριών που παρέχονται σε αυτή και όλου εν γένει του περιεχομένου της συμπεριλαμβανομένων των εξαγόμενων αποτελεσμάτων γίνεται με αποκλειστική δική σου ευθύνη. Σε καμία περίπτωση δεν παρέχεται εγγύηση, ρητή ή έμμεση, διατυπωμένη ή υποτιθέμενη, και κατά συνέπεια δεν υφίσταται καμία ευθύνη μας (ούτε καν από αμέλεια) για οποιαδήποτε ζημία τυχόν σου προκληθεί από τη χρήση της εφαρμογής ή των πληροφοριών που εμπεριέχονται ή εξάγονται από αυτή. Χρησιμοποιώντας την εφαρμογή αποδέχεσαι ανεπιφύλακτα ότι δεν ευθυνόμαστε για αποκατάσταση οποιασδήποτε τυχόν ζημίας (θετικής ή αποθετικής, που μπορεί ενδεικτικά να συνίσταται σε απώλεια κερδών, δεδομένων, διαφυγόντα κέρδη, χρηματική ικανοποίηση κλπ.) από τη χρήση της εφαρμογής από εσένα ή τρίτους, από αιτία που έχει σχέση με τη λειτουργία της ή μη, τη χρήση της, την ακρίβεια των πληροφοριών και υπολογισμών που εξάγονται, τυχόν αδυναμία παροχής υπηρεσιών / πληροφοριών που διατίθενται από αυτήν ή από τυχόν μη επιτρεπόμενες παρεμβάσεις τρίτων σε προϊόντα / υπηρεσίες / πληροφορίες που διατίθενται μέσω αυτής. Καταβάλλουμε κάθε δυνατή προσπάθεια για την καλή λειτουργία της εφαρμογής, σε καμία όμως περίπτωση δεν εγγυόμαστε ότι οι λειτουργίες της θα είναι αδιάκοπες ή χωρίς κανενός είδους σφάλμα, απαλλαγμένες από ιούς και παρόμοια στοιχεία. Σε ενημερώνουμε ότι διατηρούμε το δικαίωμα τροποποίησης του περιεχομένου της εφαρμογής οποτεδήποτε κριθεί αναγκαίο και χωρίς προηγούμενη προειδοποίηση.</string>
    <string name="img_zygos_desc"><b>Image scale</b></string>
    <string name="img_addshift_desc"><b>Image add shift</b></string>
    <string name="text_salary">Minimum salary</string>
    <string name="text_symvasi">Work contract</string>
    <string name="text_sundays">Sundays</string>
    <string name="text_saturdays">Saturdays</string>
    <string name="text_nightshift">Nights</string>
    <string name="text_overwork">Overtime</string>
    <string name="text_overtime">Overwork</string>
    <string name="text_easterbonus">Easter\npay</string>
    <string name="text_christmasbonus">Christmas\npay</string>
    <string name="text_holidaybonus">Holiday\npay</string>
    <string name="text_holidays">Holidays</string>
    <string name="text_pregnant">Pregnancy</string>
    <string name="text_discrimination">Discrimination</string>
    <string name="text_layoff">Firing</string>
    <string name="text_whatcanido">What I can do</string>
    <string name="text_info_salary"><![CDATA[Ο βασικός μισθός είναι ο κατώτατος μισθός που επιτρέπεται να λάβει ένας υπάλληλος. Αποκαλείται και “νόμιμος μισθός”. Δεν επιτρέπεται χαμηλότερος μισθός από αυτόν. <br /><br /><b>Πόσο είναι ο βασικός μισθός σήμερα;</b><br />Ο βασικός μισθός δεν είναι ίδιος για όλους. Εξαρτάται από δύο πράγματα: <br /> α) από το αν σήμερα είσαι πάνω ή κάτω από 25 χρονών, και <br /> β) από το πόσο προϋπηρεσία είχες μέχρι τις 14 Φεβρουαρίου 2012. <br /><br /><br /> <b>ΒΑΣΙΚΟΣ ΜΙΣΘΟΣ ΓΙΑ ΟΣΟΥΣ ΕΙΝΑΙ 25 ΧΡΟΝΩΝ ΚΑΙ ΠΑΝΩ:</b><br /><br /> 1) Αν έως τις 14/02/2012 είχες 0&#8211;3 χρόνια προϋπηρεσίας: <br />Βασικός Μισθός σήμερα = €586,08 / μήνα <br />(αναλογικά Βασικό Ημερομίσθιο = €23,46 / ημέρα) <br />(αναλογικά Βασικό Ωρομίσθιο = €3,52 / ώρα) <br /><br /> 2) Αν έως τις 14/02/2012 είχες 3&#8211;6 χρόνια προϋπηρεσίας: <br />Βασικός Μισθός σήμερα = €644,69 / μήνα <br />(αναλογικά Βασικό Ημερομίσθιο = €25,80 / ημέρα) <br />(αναλογικά Βασικό Ωρομίσθιο = €3,87 / ώρα) <br /><br /> 3) Αν έως τις 14/02/2012 είχες 6&#8211;9 χρόνια προϋπηρεσίας: <br />Βασικός Μισθός σήμερα = €703,30 / μήνα <br />(αναλογικά Βασικό Ημερομίσθιο = €28 / ημέρα) <br />(αναλογικά Βασικό Ωρομίσθιο = €4,21 / ώρα) <br /><br /> 4) Αν έως τις 14/02/2012 είχες πάνω από 9 χρόνια προϋπηρεσίας: <br />Βασικός Μισθός σήμερα = €761,90 / μήνα <br />(αναλογικά Βασικό Ημερομίσθιο = €30,47 / ημέρα) <br />(αναλογικά Βασικό Ωρομίσθιο = €4,57 / ώρα) <br /><br /><br /> <b>ΒΑΣΙΚΟΣ ΜΙΣΘΟΣ ΓΙΑ ΟΣΟΥΣ ΕΙΝΑΙ ΚΑΤΩ ΑΠΟ 25 ΧΡΟΝΩΝ</b><br /><br /> 1) Αν έως τις 14/02/2012 είχες 0&#8211;3 χρόνια προϋπηρεσίας: <br />Βασικός Μισθός σήμερα = €510,95 / μήνα <br />(αναλογικά Βασικό Ημερομίσθιο = €20,47 / ημέρα) <br />(αναλογικά Βασικό Ωρομίσθιο = €3,07 / ώρα) <br /><br /> 2) Αν έως τις 14/02/2012 είχες 3&#8211;6 χρόνια προϋπηρεσίας: <br />Βασικός Μισθός σήμερα = €562,05 / μήνα <br />(αναλογικά Βασικό Ημερομίσθιο = €22,47 / ημέρα) <br />(αναλογικά Βασικό Ωρομίσθιο = €3,37 / ώρα) <br /><br /><br /> Τα παραπάνω ποσά είναι μικτά. Για να βρεις τα καθαρά (τα λεφτά στην τσέπη σου), τότε αφαιρείς περίπου το 16%. Λέμε περίπου, γιατί οι κρατήσεις δεν είναι ίδιες για όλες τις ειδικότητες και όλους τους κλάδους. Πάντως, αν αφαιρέσεις ένα 16% έχεις μια καλή εικόνα πόσο είναι τα καθαρά. Πχ τα μικτά 3,07ευρώ είναι 2,58 ευρώ καθαρά.]]></string>
</resources>