<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="info"
        android:selectable="false"
        android:persistent="false"
        android:summary="@string/pref_infotop"
        android:title="">
    </Preference>
        <EditTextPreference
            android:defaultValue="0"
            android:inputType="numberDecimal"
            android:key="paid_hour_key"
            android:layout="@layout/preference_multiline"
            android:title="@string/pref_title_howmuch_paid" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_below25"
            android:layout="@layout/preference_multiline"
            android:title="@string/pref_title_below25yold" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_hotels"
            android:layout="@layout/preference_multiline"
            android:title="@string/pref_title_hotels" />

    <EditTextPreference
        android:defaultValue="@integer/pref_default_years_experience"
        android:layout="@layout/preference_multiline"
        android:inputType="number"
        android:key="years_experience_key"
        android:title="@string/pref_title_years_experience" />

</PreferenceScreen>
