<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gr.commonslab.plirosousosta.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/text_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:fontFamily="fonts/PFDinTextCondPro-Light.ttf"
        android:textSize="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/text_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="fonts/PFDinTextCondPro-Light.ttf"
        android:text="00:00:00"
        android:textColor="@color/colorGrey"
        android:textSize="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_datetime" />

    <ImageButton
        android:id="@+id/Button_clock"
        android:layout_width="89dp"
        android:layout_height="98dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="6dp"
        android:background="@android:color/white"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_hours"
        app:srcCompat="@drawable/ic_clock" />

    <ImageButton
        android:id="@+id/Button_add_shift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_plus"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/Button_clock"
        app:layout_constraintBottom_toTopOf="@+id/button_payed_correctly" />



    <TextView
        android:id="@+id/text_insert_shift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_insert_shift"
        android:fontFamily="fonts/PFDinTextCondPro-Regular.ttf"
        android:textSize="26px"
        android:textColor="@color/colorGrey"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toBottomOf="@+id/Button_add_shift" />

    <Button
        android:id="@+id/button_payed_correctly"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/button_payed_correctly"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_info" />

    <TextView
        android:id="@+id/text_label_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_month"
        android:fontFamily="fonts/PFDinTextCondPro-Regular.ttf"
        android:textSize="20px"
        app:layout_constraintTop_toBottomOf="@+id/text_insert_shift"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/text_info_month"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:fontFamily="fonts/PFDinTextCondPro-Light.ttf"
        android:text="TextView"
        android:textSize="52px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_month"
        app:layout_constraintBottom_toTopOf="@+id/button_whatcanido"/>

    <TextView
        android:id="@+id/text_label_haveworked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_you_have_worked"
        android:fontFamily="fonts/PFDinTextCondPro-Regular.ttf"
        android:textSize="20px"
        app:layout_constraintTop_toBottomOf="@+id/text_insert_shift"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toRightOf="@+id/text_label_month"
        app:layout_constraintRight_toLeftOf="@+id/text_label_paid"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/text_info_worked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="fonts/PFDinTextCondPro-Medium.ttf"
        android:textSize="52px"
        android:text="0"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/text_label_haveworked"
        app:layout_constraintBottom_toTopOf="@+id/button_whatcanido"
        app:layout_constraintRight_toRightOf="@+id/text_label_haveworked"
        app:layout_constraintLeft_toLeftOf="@+id/text_label_haveworked"/>

    <TextView
        android:id="@+id/text_label_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_you_will_earn"
        android:fontFamily="fonts/PFDinTextCondPro-Regular.ttf"
        android:textSize="20px"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text_insert_shift"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toRightOf="@+id/text_label_haveworked"
        app:layout_constraintRight_toLeftOf="@+id/text_label_entitled" />

    <TextView
        android:id="@+id/text_info_paid"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        android:fontFamily="fonts/PFDinTextCondPro-Light.ttf"
        android:text="0"
        android:textSize="52px"
        app:layout_constraintLeft_toLeftOf="@+id/text_label_paid"
        app:layout_constraintRight_toRightOf="@+id/text_label_paid"
        app:layout_constraintTop_toBottomOf="@+id/text_label_paid"
        app:layout_constraintBottom_toTopOf="@+id/button_whatcanido"/>

    <TextView
        android:id="@+id/text_label_entitled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_you_are_entitled"
        android:fontFamily="fonts/PFDinTextCondPro-Regular.ttf"
        android:textSize="20px"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text_insert_shift"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toRightOf="@+id/text_label_paid"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_info_entitled"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="2dp"
        android:fontFamily="fonts/PFDinTextCondPro-Medium.ttf"
        android:text="amount"
        android:textColor="#e8646f"
        android:textSize="52px"
        app:layout_constraintLeft_toRightOf="@+id/text_info_paid"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_entitled" />

    <ImageButton
        android:id="@+id/Button_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:srcCompat="@drawable/ic_info"
        app:layout_constraintLeft_toLeftOf="@+id/text_info_entitled"
        android:layout_marginLeft="5dp"
        app:layout_constraintTop_toBottomOf="@+id/text_info_entitled"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toTopOf="@+id/button_whatcanido"/>

</android.support.constraint.ConstraintLayout>
