<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gr.commonslab.plirosousosta.HistoryActivity">

<android.support.constraint.ConstraintLayout
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- START WORKHOURS INFO BOX -->
    <TextView
        android:id="@+id/square_workhours"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="#55b4ae"
        android:text=""
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/text_youhaveworked"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/history_youhaveworked"
        android:textColor="#31706d"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@+id/square_workhours"
        app:layout_constraintRight_toRightOf="@+id/square_workhours"
        app:layout_constraintLeft_toLeftOf="@+id/square_workhours"/>

    <ImageView
        android:id="@+id/image_clock"
        android:layout_width="33dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/square_workhours"
        app:layout_constraintRight_toRightOf="@+id/square_workhours"
        app:layout_constraintTop_toBottomOf="@+id/text_youhaveworked"
        app:srcCompat="@drawable/ic_clock" />
    <TextView
        android:id="@+id/text_workhours"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:text="30 ώρες"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/image_clock"
        app:layout_constraintRight_toRightOf="@+id/square_workhours"
        app:layout_constraintLeft_toLeftOf="@+id/square_workhours"/>

    <TextView
        android:id="@+id/text_workminutes"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:text="και 12 λεπτά"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/text_workhours"
        app:layout_constraintRight_toRightOf="@+id/square_workhours"
        app:layout_constraintLeft_toLeftOf="@+id/square_workhours"/>
    <!-- END WORKHOURS INFO BOX -->
    <!-- START PAID AMOUNT INFO BOX -->
    <TextView
        android:id="@+id/square_paid"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="#55b4ae"
        android:text=""
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toRightOf="@+id/square_workhours"/>

    <TextView
        android:id="@+id/text_youwillget"
        android:layout_width="96dp"
        android:layout_height="35dp"
        android:text="@string/history_youwillget"
        android:textColor="#31706d"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="@+id/square_paid"
        app:layout_constraintRight_toRightOf="@+id/square_paid"
        app:layout_constraintLeft_toLeftOf="@+id/square_paid"/>

    <TextView
        android:id="@+id/text_amount"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:text="€292"
        android:textSize="32dp"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/text_youwillget"
        app:layout_constraintRight_toRightOf="@+id/square_paid"
        app:layout_constraintLeft_toLeftOf="@+id/square_paid"/>
    <!-- END PAID AMOUNT INFO BOX -->

    <TextView
        android:id="@+id/text_should_get"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/entitled_main"
        android:background="#e8646f"
        android:textColor="#941620"
        android:textAlignment="center"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/square_workhours"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/text_total_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#e8646f"
        android:text="€320"
        android:textSize="28dp"
        android:textAlignment="center"
        android:textColor="#FFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_should_get"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>
</ScrollView>